2001-04-11  lav

	* user.cc: stop drag mark on block operations.

2001-04-09  lav

	* keymap.cc: fix several sign-expansion bugs.
	* block.cc: stop drag mark on block operations.

2001-03-20  lav

	* user.cc: (UserLineDown) don't insert many \n in text mode; don't
	  mark text modified if last eol is added.

2001-03-16  lav

	* getch.cc: (linux_process_key) new function.
	* keymap.cc, keymap.h, keymapfn.cc, keymapdf.cc: new action
	  remember-block to save block to clipboard; bind delete-block
	  to xterm's shift-del and yank-block to xterm's shift-ins.
	* user.cc, user.h: (UserRememberBlock) new function.

2001-03-16  lav

	* edit.cc, edit.h, kern.cc: (SeekStdCol) new function, use it.
	* user.cc: fix UserLineDown in case when EOL is missing on last line;
	  call SeekStdCol in UserMark* functions.
	* search.cc, highli.cc: include xalloca.h.

2001-02-01  lav

	* about.cc: correct copyright string.

2001-01-31  lav

	* search.cc: fix replacing when replace string ends with \.
	  (reported by Andrey E. Lerman <lae@lae.pp.ru>)

2000-12-26  lav

	* block.cc: set modification flag after piping in.
	* user.cc: paranoia - set flag in UsesPipeBlock.

2000-12-20  lav

	* block.cc: fix block end setting in DoUnindent/DoIndent.

2000-12-18  lav

	* block.cc: (DoUnindent) break loop if no next line found (fixes
	  spinning in case of missing EOL on last line of block).
	* keymap.cc: flush input only if no action matched.
	* keymap.h: add MARK_ALL action.
	* keymapdf.cc, keymapfn.cc: bind MARK_ALL.

2000-09-15  lav

	* edit.cc: call LoadMainMenu.
	* keymap.cc, keymap.h, keymapdf.cc, keymapfn.cc: lots of new functions;
	  pretty keys support.
	* menu1.cc, menu1.h: loadable menu support.
	* mainmenu.cc: adapt for new menu1.h

2000-09-04  lav

	* edit.cc, loadsave.cc: support DISABLE_FILE_LOCKS
	* screen.cc: use TextPoint in display process (minor speed-up).
	* textpoin.cc, textpoin.h: speed-up TextPoint cache.

2000-03-24  lav
